# Rubytron

./: .gitignore  .gitmodules  README.md  key.rb  meson.build  palette.rb  resize.rb  rubytron.rb  snake.rb  test.rb  xeyes.rb
.github/workflows/: compile.yml
data/: Info.plist
data/Editor/: Info.plist
data/Runtime/: Info.plist
inc/: Desktop.hpp  FocusAction.hh  TitleBarMode.hh  Window.hpp  WindowZone.hh  helper.hh  sprites.hh
inc/Editor/: Desktop.hpp  FocusAction.hh  TitleBarMode.hh  Window.hpp  WindowZone.hh  helper.hh
inc/Runtime/: Player.hpp
inc/Shared/: AbstractWindow.hpp  ProgramPod.hpp  helper.hh  sprites.hh
media/: Screen Recording 2022-09-21 at 20.53.53.mov
programs/: autorun.rb  background.rb  editor.rb  fractal_tree.rb  key.rb  palette.rb  resize.rb  snake.rb  sprite.rb  terminal.rb  test.rb  verlet.rb  xeyes.rb
src/: Desktop.cpp  Window.cpp  helper.cpp  main.cpp  meson.build  sprites.cpp
src/Editor/: Desktop.cpp  Window.cpp  helper.cpp  main.cpp  meson.build  meson.post_install.darwin.sh
src/Runtime/: Player.cpp  main.cpp  meson.build  meson.build.darwin.sh  meson.build.linux.sh  meson.build.windows.sh  meson.post_install.sh
src/Shared/: AbstractWindow.cpp  ProgramPod.cpp  helper.cpp  sprites.cpp
